--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "backend"
   ],
   "author": "Muhammad Umer Farooq",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.0"
+  }
 }
