--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Writing a professional backend code of complex project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -r dotenv/config --experimental-json-modules ./src/index.js"
   },
   "keywords": [
     "javascript",
@@ -15,5 +16,11 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prettier": "^3.5.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0"
   }
 }
